// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
────────╭──────────────────────────────────────────────────────────────╮─────── 
       S│                         station help                         │PR      
▼ statio│                                                              │qs] [▾] 
 [1] ○ c│  Ctrl-O     open/close project view                          │ ✓ [sh] 
 [2] - d│  Ctrl-Q     quit Station                                     │   [sh] 
 [3] ○ p│  Ctrl-\\     split pane right                                 │ ✓ [sh] 
 [4] + s│  Ctrl-^     split pane below (Ctrl-6)                        │   [sh] 
 [5] ⠋ s│  Ctrl-]     focus next pane                                  │ … [sh] 
        │  Ctrl-/     close split pane (Ctrl-_)                        │        
▼ observ│  Enter/Sp   open project view on welcome                     │qs] [▾] 
 [6] x b│  Esc/↑↓     context menu close/move                          │ ✓ [sh] 
 [7] ⠋ p│  Enter/Sp   context menu select                              │ … [sh] 
 [8] ○ t│                     station project view                     │ ✓ [sh] 
        │  ↑/↓        move cursor                                      │        
▼ script│  ↵          open focused session                             │qs] [▾] 
 [9] ○ a│  tab        next session needing you                         │x1 [sh] 
 [a] ? m│  wheel      scroll project list                              │10 [sh] 
        │  1-9/a-z    open visible session                             │        
▼ empty-│  N/A/R/C/F/P  new/add/rename/fold/fork/settings              │qs] [▾] 
        ╰──────────────────────────────────────────────────────────────╯        
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                     opencode  idle           +14 -6 #5 x1 [sh] 
 [a] ? metadata-refresh              opencode  unknown           +3 -1 #10 [sh] 
                                                                                
search: apiject  0 sessions                                       [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the collapse project sheet 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh]
 [4] + session-resume                codex     starting                    [sh]
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh]

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh]
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh]
┌──────────────────────────────────────────────────────────────────────────────┐
│ Collapse Project                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                               │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the collapse project sheet windows a long list 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│ Collapse Project                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│ 5 filler-0 healthy                                                           │
│ 6 filler-1 healthy                                                           │
│ 7 filler-2 healthy                                                           │
│ 8 filler-3 healthy                                                           │
│ 9 filler-4 healthy                                                           │
│ a filler-5 healthy                                                           │
│ b filler-6 healthy                                                           │
│ c filler-7 healthy                                                           │
│ d filler-8 healthy                                                           │
│ e filler-9 healthy                                                           │
│ f filler-10 healthy                                                          │
│ g filler-11 healthy                                                          │
│ h filler-12 healthy                                                          │
│ i filler-13 healthy                                                          │
│                                                                              │
│ ↑↓ move   ↵ select   1-18 of 25   Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project settings picker sheet 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh]
 [4] + session-resume                codex     starting                    [sh]
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh]

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh]
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh]
┌──────────────────────────────────────────────────────────────────────────────┐
│ Project Settings                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                               │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project settings panel 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │✓1 codex ● update v0.3.0 → v0.4.0            │h] 
 [2│  Remove project          │ 2 opencode unknown                          │h] 
 [3│                          │                                             │h] 
 [4│                          │ ✓ current · ↑↓ ↵ · 1-9/a-z                  │h] 
 [5│                          │                                             │h] 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │h] 
 [7│                          │                                             │h] 
 [8│                          │                                             │h] 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │h] 
 [a│                          │                                             │h] 
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings remove pane 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Remove project                              │▾] 
 [1│  Default agent           │ Removes it from Station.                    │h] 
 [2│▸ Remove project          │ Worktrees & files stay on disk.             │h] 
 [3│                          │                                             │h] 
 [4│                          │ Type "delete station" to confirm            │h] 
 [5│                          │ ▸ |delete station                           │h] 
   │                          │                                             │   
▼ o│                          │ [ Remove project (R) ]                      │▾] 
 [6│                          │                                             │h] 
 [7│                          │                                             │h] 
 [8│                          │                                             │h] 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │h] 
 [a│                          │                                             │h] 
   │                          │                                             │   
▼ e│ ←/esc back                                                             │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings optimistic default 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │ 1 codex ● update v0.3.0 → v0.4.0            │h] 
 [2│  Remove project          │✓2 opencode unknown                 updating…│h] 
 [3│                          │                                             │h] 
 [4│                          │ ✓ current · ↑↓ ↵ · 1-9/a-z                  │h] 
 [5│                          │                                             │h] 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │h] 
 [7│                          │                                             │h] 
 [8│                          │                                             │h] 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │h] 
 [a│                          │                                             │h] 
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove slot sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐ idle           +14 -6 #5 x1 [sh] 
│ Select session to delete                   │ unknown           +3 -1 #10 [sh] 
│                                            │                                  
│ ↑↓ move · ↵ choose · slot or click         │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove confirm sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
┌────────────────────────────────────────────┐                                  
│ Delete session?                            │                    [sh] [qs] [▾] 
│ Session  cli-help-man                      │ idle           +14 -6 #5 x1 [sh] 
│ Removes agent, worktree, and panes.        │ unknown           +3 -1 #10 [sh] 
│                                            │                                  
│ Yes (y)     No (n)                         │                    [sh] [qs] [▾] 
│ Esc/Enter:cancel                           │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the external agent removal information 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh]
 [4] + session-resume                codex     starting                    [sh]
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh]

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh]
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh]
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh]
┌──────────────────────────────────────────────────────────────────┐
│ Cannot delete worktree                                           │h] [qs] [▾]
│ This agent was started outside Station.                          │ #5 x1 [sh]
│ Station can see its status, but cannot stop it.                  │-1 #10 [sh]
│                                                                  │
│ Stop or remove it from its original terminal or external tooling.│h] [qs] [▾]
│                                                                  │
│ Esc/Enter:close                                                  │───────────
└──────────────────────────────────────────────────────────────────┘/esc:close
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                     opencode  idle           +14 -6 #5 x1 [sh] 
 [a] ? metadata-refresh              opencode  unknown           +3 -1 #10 [sh] 
                                                                                
Rename: ↑↓ move · ↵ choose · 1-9/a-z or click                     [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown  x 1 exited  ○ 0 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                   AGENT     STATUS                DIFF · PR      
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                codex     Agent needs appro… +8 -2 #12 x2 [sh] 
 [2] ? metadata-refresh          codex     unknown                   +3 -1 [sh] 
 [3] ! popup-latency             codex     No progress was… +120 -44 #13 … [sh] 
 [4] ⠋ pr-info                   codex     working                   #11 ✓ [sh] 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                  opencode  exited                          [sh] 
 [6] ! sqlite-cleanup            opencode  Agent needs appro… +19 -2 #6 x1 [sh] 
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       |hook-scope                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the fork slot sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐ idle           +14 -6 #5 x1 [sh] 
│ Select session to fork                     │ unknown           +3 -1 #10 [sh] 
│                                            │                                  
│ ↑↓ move · ↵ choose · slot or click         │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the fork details sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
┌────────────────────────────────────────────┐ idle             +1 -1 #4 ✓ [sh] 
│ Fork Session                               │                                  
│ Source   station · cli-help-man            │                    [sh] [qs] [▾] 
│ > Name   Hexagonal PT 12|                  │ idle           +14 -6 #5 x1 [sh] 
│   Copy   [x] uncommitted changes           │ unknown           +3 -1 #10 [sh] 
│ Source keeps running — copy is read-only.  │                                  
│                                            │                    [sh] [qs] [▾] 
│ Fork (enter)                               │                                  
│ ↑↓:field space:toggle enter:fork esc:back  │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                    ● unknown│
│▸ [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter create session · Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session review project focus 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│▸ Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                    ● unknown│
│  [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter choose project · Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session review name focus 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│▸ Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                    ● unknown│
│  [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter edit name · Esc cancel                                      │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session review agent focus 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│▸ Agent (A) codex                                                    ● unknown│
│  [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter choose agent · Esc cancel                                   │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session healthy agent 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                    ● healthy│
│▸ [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter create session · Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session degraded agent 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                   ● degraded│
│▸ [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter create session · Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session unavailable agent 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│  Project (P) station                                                         │
│  Name (N) station-XXXXXX                                                     │
│  Agent (A) codex                                                ● unavailable│
│▸ [ Create session (C) ]                                                      │
│ ↑↓ focus · Enter create session · Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│ Project      station                                                         │
│▸ Name |station-XXXXXX                                                        │
│  [ Save (Ctrl-S) ]                                                           │
│  Back (Esc)                                                                  │
│ Type name · Left/Right cursor · Enter save · ↑↓ focus                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name save focus 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│ Project      station                                                         │
│  Name station-XXXXXX                                                         │
│▸ [ Save (Ctrl-S) ]                                                           │
│  Back (Esc)                                                                  │
│ Enter save name · ↑↓ focus · Esc back                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name back focus 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│ Project      station                                                         │
│  Name station-XXXXXX                                                         │
│  [ Save (Ctrl-S) ]                                                           │
│▸ Back (Esc)                                                                  │
│ Enter back without saving · ↑↓ focus                                         │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session narrow review 1`] = `
"                                        
FLEET  ● 0 ready  ⠋ 2 working  ! 0      
─────────────────────────────────────── 
       SESSION                STA…      
▼ station  5 sessions · … [sh] [qs] [▾] 
 [1] ○ cli-help-man           idle [sh] 
 [2] - docs-cleanup           no … [sh] 
 [3] ○ pty-buffer             idle [sh] 
┌──────────────────────────────────────┐
│ Create Session                       │
│  Project (P) station                 │
│  Name (N) station-XXXXXX             │
│  Agent (A) codex           ● degraded│
│▸ [ Create session (C) ]              │
│ ↑↓ focus · Enter create session · Esc│
└──────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc back                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
 [2] - docs-cleanup                  codex     no agent                    [sh] 
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh] 
 [4] + session-resume                codex     starting                    [sh] 
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh] 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh] 
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh] 
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex ● update v0.3.0 → v0.4.0                                             │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc back                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project default agent picker 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffer                    codex     idle                  #73 ✓ [sh]
 [4] + session-resume                codex     starting                    [sh]
 [5] ⠋ station-XXXXXXy               codex     working      +412 -96 #76 … [sh]

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                  opencode  exited                 #8 ✓ [sh]
 [7] ⠋ provider-hooks                opencode  working        +32 -8 #16 … [sh]
 [8] ○ trace-bundle                  opencode  idle             +1 -1 #4 ✓ [sh]

┌──────────────────────────────────────────────────────────────────────────────┐
│ Select default agent for station                                             │
│                                                                              │
│✓1 codex ● update v0.3.0 → v0.4.0                                             │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ✓ current   ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                   │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Open (→/↵)                             Cancel (Esc)                          │
│ Click selects · Open enters · ↑↓ + Enter supported                           │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the first project sheet 1`] = `
"                                                                                
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
[ + Add your first project (A) ]                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Your First Project                                                       │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Open (→/↵)                             Cancel (Esc)                          │
│ Click selects · Open enters · ↑↓ + Enter supported                           │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project folder actions 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project Folder                                                        │
│ Folder  /Users/example/Developer                                             │
│                                                                              │
│ > .                                                               this folder│
│   station/                                                             folder│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Choose (↵)     Open (→)       Parent (←)     Search (/)     Cancel (Esc)     │
│ Single-click selects · actions complete navigation                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project review actions 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project: Review                                                          │
│ Selected folder /Users/example/Developer/station                             │
│ Git root        /Users/example/Developer/station                             │
│ Project id      station                                                      │
│ Display name    Station                                                      │
│                                                                              │
│▸ [ Add project (A) ]                                                         │
│  Edit id (N)                                                                 │
│  Choose folder (B)                                                           │
│  Cancel (Esc)                                                                │
│ Enter add project                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project Git recovery 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project: Review                                                          │
│ Selected folder /Users/example/Developer/station                             │
│ Git root        not detected                                                 │
│ Project id      station                                                      │
│ Display name    Station                                                      │
│ Choose a folder inside an existing Git repository.                           │
│  [ Add project (A) ]                                                         │
│  Edit id (N)                                                                 │
│▸ Choose folder (B)                                                           │
│  Cancel (Esc)                                                                │
│ Enter choose another folder                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project id editor actions 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project: Review                                                          │
│ Selected folder /Users/example/Developer/station                             │
│ Git root        /Users/example/Developer/station                             │
│ Project id      station|                                                     │
│ Display name    Station                                                      │
│                                                                              │
│▸ [ Save id (Ctrl-S) ]                                                        │
│  Back (Esc)                                                                  │
│ Enter save project id                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project success action 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Project Added                                                                │
│ Project         Station                                                      │
│ Root            /Users/example/Developer/station                             │
│ Config updated. Reconciled successfully.                                     │
│▸ [ Dashboard (D) ]                                                           │
│ Enter or D returns to dashboard                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project failure actions 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                       AGENT     STATUS            DIFF · PR      
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project Failed                                                           │
│ Could not add this project.                                                  │
│ The TUI could not complete the observer operation.                           │
│ Code    CLIENT_OBSERVER_OPERATION_FAILED                                     │
│▸ [ Retry (R) ]                                                               │
│  Choose folder (B)                                                           │
│  Cancel (Esc)                                                                │
│ ↑↓ action · Enter activates focused action                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project narrow actions 1`] = `
"                                        
FLEET  ● 0 ready  ⠋ 2 working  ! 0      
┌──────────────────────────────────────┐
│ Add Project                          │
│ Start location                       │
│                                      │
│ > current di /Users/example/Developer│
│   ~                              home│
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│ Open (→/↵)         Cancel (Esc)      │
│ Click selects · Open enters · ↑↓ + En│
└──────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the widget settings panel 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffe┌──────────────────────────────────────────────┐     #73 ✓ [sh]
 [4] + session-r│ widgets                                      │           [sh]
 [5] ⠋ station-o│ saved to config.toml                         │ -96 #76 … [sh]
                │ ▸ [on ] time                               × │
▼ observer  3 se│   [off] weather NYC                        × │  [sh] [qs] [▾]
 [6] x batch-exp│   [on ] moon                               × │      #8 ✓ [sh]
 [7] ⠋ provider-│   [ + add widget ]                           │2 -8 #16 … [sh]
 [8] ○ trace-bun│ ↵ toggle   [ ] reorder   x remove   a add   e│+1 -1 #4 ✓ [sh]
                └──────────────────────────────────────────────┘
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾]
 [9] ○ api-cache                     opencode  idle           +14 -6 #5 x1 [sh]
 [a] ? metadata-refresh              opencode  unknown           +3 -1 #10 [sh]

▼ empty-project  0 sessions                                       [sh] [qs] [▾]

───────────────────────────────────────────────────────────────────────────────
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close
"
`;

exports[`modal flow golden frames renders the widget settings picker 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                       AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                  codex     idle           +14 -6 #70 ✓ [sh]
 [2] - docs-cleanup                  codex     no agent                    [sh]
 [3] ○ pty-buffe┌──────────────────────────────────────────────┐     #73 ✓ [sh]
 [4] + session-r│ add widget                                   │           [sh]
 [5] ⠋ station-o│ weather and tz require config.toml           │ -96 #76 … [sh]
                │ ▸ time                                       │
▼ observer  3 se│   fleet                                      │  [sh] [qs] [▾]
 [6] x batch-exp│   open PRs                                   │      #8 ✓ [sh]
 [7] ⠋ provider-│   moon                                       │2 -8 #16 … [sh]
 [8] ○ trace-bun│ ↵ add   esc back                             │+1 -1 #4 ✓ [sh]
                └──────────────────────────────────────────────┘
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾]
 [9] ○ api-cache                     opencode  idle           +14 -6 #5 x1 [sh]
 [a] ? metadata-refresh              opencode  unknown           +3 -1 #10 [sh]

▼ empty-project  0 sessions                                       [sh] [qs] [▾]

───────────────────────────────────────────────────────────────────────────────
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close
"
`;
